# PracticeTakes

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  .sops.yaml.example  CMakeLists.txt  LICENSE  README.md  RELEASING.md  build-and-run.sh  secret-patterns  vcpkg.json
.github/workflows/: build-multiplatform.yml  clang-tidy-main.yml  release.yml
cmake/: Packaging.cmake  PatchJuceAlsaChannelMismatch.cmake
cmake/triplets/: x64-linux-practice.cmake
contracts/feedback/: v1.schema.json
docs/: settings-defaults.md
docs/development/: ARCHITECTURE.md  BUILDING.md  CODE_STYLE.md  FEEDBACK.md  QUALITY.md  README.md  RELEASING.md  SECRETS.md
packaging/linux/: org.derekrneilson.practicetakes.desktop
scripts/: README.md  build-and-run.sh  check-linux-build-dependencies.sh  run_clang_tidy.py  setup-feedback-dashboard-daemon.sh  setup_practice_takes_roadmap.sh  update-feedback-dashboard-daemon.sh  version.py
scripts/feedback/: configure-cloudflare-access.sh  migrate-feedback-database.sh  run-recovery-drill.py  setup-dashboard-daemon.sh  update-dashboard-daemon.sh
scripts/practice_takes_roadmap/: __init__.py  config.py  discovery.py  github.py  main.py  models.py  planning.py  progress.py  state.py
scripts/quality/: run_clang_format.py  run_clang_tidy.py
scripts/release/: version.py
scripts/roadmap/: setup.sh
scripts/secrets/: secrets_manager.py  test_secrets_manager.py
services/: .dockerignore  package-lock.json  package.json  vitest.config.ts
services/feedback-intake/: .dev.vars.example  .env.example  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  package.json  tsconfig.json  wrangler.example.jsonc  wrangler.jsonc
services/feedback-intake/migrations/: 0001_initial.sql  0002_admin_triage.sql  0003_admin_action_receipts.sql  0004_optional_screenshots.sql  0005_idempotent_submissions.sql  0006_operations.sql  0007_email_notification_limits.sql
services/feedback-intake/src/: access.ts  admin.css  admin.html  admin.ts  audit.html  audit.js  dashboard.js  docker-server.ts  html.d.ts  index.ts  notifications.ts  operations.ts
services/feedback-intake/test/: access.test.ts  admin.test.ts  index.test.ts  notifications.test.ts
src/: AppDefaults.h  AudioInputService.h  FeedbackComponent.h  MainComponent.cpp  MainComponent.h  SpectrogramComponent.cpp  SpectrogramComponent.h  Theme.cpp  Theme.h  TunerComponent.cpp  TunerComponent.h  main.cpp
src/app/: AppDefaults.h  AppWindows.h  MainComponent.cpp  MainComponent.h  MainTitleBar.h  MicrophoneWarning.h  SettingsPersistence.cpp  SettingsPersistence.h  Theme.h  ThemeType.h
src/audio/: AudioInputService.cpp  AudioInputService.h  AudioRecoveryPolicy.h  AudioSampleFifo.h
src/feedback/: FeedbackComponent.cpp  FeedbackComponent.h  FeedbackInvitationPolicy.h
src/spectrogram/: SpectrogramComponent.cpp  SpectrogramComponent.h
src/tuner/: PitchDetector.cpp  PitchDetector.h  TunerComponent.cpp  TunerComponent.h  TunerDrawing.cpp
tests/: AppDefaultsTests.cpp  AudioRecoveryPolicyTests.cpp  AudioSampleFifoTests.cpp  FeedbackInvitationPolicyTests.cpp  PitchDetectorTests.cpp  SettingsPersistenceTests.cpp
triplets/: arm64-linux-practice.cmake  x64-linux-practice.cmake
